--- a/.github/workflows/build_linux.yaml
+++ b/.github/workflows/build_linux.yaml
@@ -6,6 +6,7 @@ on:
     paths-ignore:
       - doc/**
       - '**/*.yml'
+      - '**/*.yaml'
       - '*.md'
       - '*.toml'
   pull_request:
@@ -14,6 +15,7 @@ on:
     paths-ignore:
       - doc/**
       - '**/*.yml'
+      - '**/*.yaml'
       - '*.md'
       - '*.toml'
   workflow_dispatch:
